# pro2holy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
src/pro2holy/: converter.py  main.py
tests/: test_converter.py
tests/fixtures/: example.pro6  expected.txt
