[project]
name = "pro2holy"
version = "0.1.0"
description = ""
authors = [
    {name = "MarceloCFSF",email = "marcelo.cfsf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4 (>=4.13.4,<5.0.0)"
]

[tool.poetry]
packages = [{include = "pro2holy", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
