[project]
name = "pro2holy"
version = "0.1.0"
description = "Propresenter to Holyrics converter"
authors = [{ name = "MarceloCFSF", email = "marcelo.cfsf@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4 (>=4.13.4,<5.0.0)",
  "pathlib (>=1.0.1,<2.0.0)",
  "lxml (>=5.4.0,<6.0.0)",
  "argparse (>=1.4.0,<2.0.0)",
]

[tool.poetry]
name = "pro2holy"
packages = [{ include = "pro2holy", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
